# upperPlanner

./: .travis.yml  CMakeLists.txt  README.md  index.html  plannerModule.cpp  plannerModule.thrift  plannerModule.thrift~  reaching-planner.xml  rpcDataProcessor.cpp  singlePlanner.cpp  singlePlanner.h  upperPlanner.cpp  upperPlanner.h  upperPlanner.thrift
app/: CMakeLists.txt  CMakeLists.txt~  cartesianInterface_Planner_localhost.xml  cartesianInterface_Planner_localhost.xml~  multiple-Cartesian-point_localhost.xml~
app/conf/: iCub_parts_activation.ini  initial_pose_table_sim.posleft_arm  initial_pose_table_sim.posright_arm  initial_pose_table_sim.postorso  reaching-planner.ini  reaching-supervisor.ini  upperPlanner.ini
app/script/: cartesianInterface_Planner.xml  multiple-Cartesian-point.xml  multiple-Cartesian-point_localhost.xml  planner_reactCtrl_PPS_iCub.xml  planner_reactCtrl_PPS_localhost.xml
doxygen/: doc-compile.sh  generate.txt
doxygen/doc/html/: _c_make_c_compiler_id_8c_source.html  _c_make_c_x_x_compiler_id_8cpp_source.html  _c_make_files_2yarpidl__thrift_2reaching_supervisor___i_d_l_8cpp_source.html  _c_make_files_2yarpidl__thrift_2reaching_supervisor___i_d_l_8h_source.html  _r_e_a_d_m_e_8md_source.html  annotated.html  class_r_r_tstar_1_1_planner-members.html  class_r_r_tstar_1_1_planner.html  class_r_r_tstar_1_1_vertex-members.html  class_r_r_tstar_1_1_vertex.html  class_single_integrator_1_1_state-members.html  class_single_integrator_1_1_state.html  class_single_integrator_1_1_system-members.html  class_single_integrator_1_1_system.html  class_single_integrator_1_1_trajectory-members.html  class_single_integrator_1_1_trajectory.html  class_single_integrator_1_1region-members.html  class_single_integrator_1_1region.html  class_state-members.html  class_state.html  class_system-members.html  class_system.html  class_trajectory-members.html  class_trajectory.html  classes.html  classmotion_plan-members.html  classmotion_plan.html  classmultiple_particle_thread-members.html  classmultiple_particle_thread.html  classparticle_thread-members.html  classparticle_thread.html  classparticle_waypoint_thread-members.html  classparticle_waypoint_thread.html  classreaching_supervisor-members.html  classreaching_supervisor.html  classreaching_supervisor___i_d_l.html  classreaching_supervisor___i_d_l__get__deadline.html  classreaching_supervisor___i_d_l__get__glob__deadline.html  classreaching_supervisor___i_d_l__get__speed_e_e.html  classreaching_supervisor___i_d_l__get__target.html  (+123 more)
doxygen/doc/html/search/: all_0.js  all_1.js  all_10.js  all_12.js  all_2.js  all_5.js  all_7.js  all_8.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_8.js  functions_0.js  functions_1.js  functions_10.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  functions_8.js  functions_a.js  functions_b.js  functions_c.js  functions_e.js  groups_0.js  searchdata.js
doxygen/generated-from-xml/: reaching-planner.xml.dox
include/: singlePlanner.h  upperPlanner.h
lib/: CMakeLists.txt  CMakeLists.txt~
lib/include/iCub/motionPlan/: motionPlan.h
lib/particleThread/: particleThread.cpp
lib/plan/: motionPlan.cpp  motionPlan.h
lib/rrt-star/: rrts.hpp
lib/src/: motionPlan.cpp
modules/: CMakeLists.txt  CMakeLists.txt~
modules/planner/: CMakeLists.txt  CMakeLists.txt~  reaching-planner.xml
modules/planner/include/: singlePlanner.h  upperPlanner.h
modules/planner/src/: plannerModule.cpp  upperPlanner.cpp
modules/planner/yarp_msg/: dimension.msg  object.msg  point3D.msg  workspace.msg
modules/supervisor/: CMakeLists.txt  CMakeLists.txt~  multipleParticleThread.cpp  multipleParticleThread.h  particleThread.h  particleWaypointThread.cpp  particleWaypointThread.h  reachingSupervisor.cpp  reachingSupervisor.h  reachingSupervisor.thrift  reachingSupervisor.xml  supervisorModule.cpp
modules/supervisor-thread/: CMakeLists.txt  CMakeLists.txt~  reachingSupervisorThread.cpp  reachingSupervisorThread.h  supervisorThreadModule.cpp
modules/supervisor/include/: multipleParticleThread.h  particleWaypointThread.h  reachingSupervisor.h
modules/supervisor/src/: multipleParticleThread.cpp  reachingSupervisor.cpp  supervisorModule.cpp
src/: plannerModule.cpp  singlePlanner.cpp  upperPlanner.cpp
